firebase deploy ok

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -22,7 +22,8 @@ label {
   color: #333;
 }
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="text"] {
   width: 94%;
   padding: 15px;
   border: none;
